Follow user ui controls
added ui controls to follow users on other user profile page

--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -34,6 +34,7 @@
 				<put-attribute name="userprojects" value="/WEB-INF/views/userprofile/projects.jsp"/>
 				<put-attribute name="useravatar" value="/WEB-INF/views/userprofile/avatar.jsp"/>
 				<put-attribute name="useretsy" value="/WEB-INF/views/userprofile/etsydetails.jsp"/>
+				<put-attribute name="userfollow" value="/WEB-INF/views/userprofile/followoptions.jsp"/>
 		    </definition>
 		</put-attribute>
 	</definition>
